# Menge

./: CMakeLists.txt  REFERENCES.md
include/: README.md
lib/: README.md
projects/g++/: CMakeLists.txt  Makefile
projects/g++/Test/: CMakeLists.txt  Makefile
src/: README.md
src/Menge/mengeMain/: mengeMain.cpp
src/Test/: main.cpp
test/: README.md
